# kdr

./: .gitignore  Cargo.toml  HOSTING.md  README.md  build_wasm.sh  run_api_server.sh  run_kdr.sh  run_puppeteer_ws_server.sh  wasm.sh
.cargo/: config.toml
bsp/: Cargo.toml
bsp/src/: lib.rs  parser.rs  types.rs
bsp/src/tracer/: mod.rs  types.rs
byte_writer/: Cargo.toml
common/: Cargo.toml
common/src/: constants.rs  lib.rs  setup_studio_model_transformations.rs
config/: Cargo.toml
config/src/: lib.rs
ghost/: Cargo.toml
ghost/src/: error.rs  lib.rs
ghost/src/get_ghost/: demo.rs  mod.rs  romanian_jumpers.rs  simen.rs  sourceruns_hlkz.rs  surf_gateway.rs
kdr/: Cargo.toml
kdr/src/: lib.rs  main.rs  utils.rs
kdr/src/app/: constants.rs  interaction.rs  mod.rs  overlay.rs  replay.rs  tracing.rs
kdr/src/app/state/: audio.rs  entities.rs  file.rs  input.rs  misc.rs  mod.rs  movement.rs  overlay.rs  playback.rs  puppet.rs  render.rs  replay.rs  window.rs
kdr/src/app/state/entities/: mod.rs  playermodel.rs  viewmodel.rs  world.rs
kdr/src/app/state/overlay/: control_panel.rs  crosshair.rs  debug_panel.rs  loading_spinner.rs  map_list.rs  mod.rs  puppet.rs  puppet_player_info.rs  puppet_player_list.rs  replay_list.rs  seekbar.rs  text.rs  ui.rs  unknown_format_modal.rs
kdr/src/app/state/playback/: mod.rs  puppet.rs  replay.rs
kdr/src/app/user_event/: mod.rs  render_context.rs  web.rs  window.rs
kdr/src/app/user_event/resource/: mod.rs  replay.rs  world.rs
kdr/src/ghost/get_ghost/: demo.rs  romanian_jumpers.rs  simen.rs
kdr/src/loader/: bsp_resource.rs  error.rs  mod.rs  native.rs  web.rs
kdr/src/overlay/: hello_world.rs  mod.rs
kdr/src/renderer/: bsp_lightmap.rs  camera.rs  egui_renderer.rs  finalize.rs  mod.rs  mvp_buffer.rs  oit.rs  render_targets.rs  skybox.rs  utils.rs  world_buffer.rs
kdr/src/renderer/post_process/: mod.rs  pp_trait.rs
kdr/src/renderer/post_process/bloom/: composite.wgsl  kawase_blur.wgsl  mod.rs
kdr/src/renderer/post_process/chromatic_aberration/: chromatic_aberration.wgsl  mod.rs
kdr/src/renderer/post_process/gray_scale/: mod.rs
kdr/src/renderer/post_process/kuwahara/: kuwahara.wgsl  mod.rs
kdr/src/renderer/post_process/posterize/: mod.rs  posterize.wgsl
kdr/src/renderer/shader/: finalize.wgsl  fullscreen_tri.wgsl  mipmap.wgsl  resolve.wgsl  skybox.wgsl  world.wgsl
kdr/src/renderer/texture_buffer/: mipmap.rs  texture_array.rs
kdr/src/renderer/world_buffer/: mod.rs  model.rs  types.rs  utils.rs  world.rs
kdr/src/renderer/world_buffer/dynamic_buffer/: mod.rs
kdr/src/renderer/world_buffer/static_buffer/: mod.rs  model.rs  world.rs
loader/: Cargo.toml
loader/src/: bsp_resource.rs  error.rs  lib.rs  native.rs  web.rs
mdl/src/: error.rs  lib.rs  nom_helpers.rs  parser.rs  types.rs
puppeteer/: Cargo.toml  README.md
puppeteer-ws-mock-server/: Cargo.toml
puppeteer-ws-mock-server/src/: main.rs
puppeteer/src/: constants.rs  error.rs  lib.rs  types.rs
rest-api-server/: Cargo.toml  README.md
rest-api-server/src/: main.rs  send_res.rs  server.rs  utils.rs
spr/src/: parser.rs
src/: bsp_loader.rs  hello_triangles.rs  lib.rs  main.rs  main_old.rs  obj.wgsl  obj_render.rs  utils.rs
src/app/: constants.rs  interaction.rs  mod.rs  movement.rs  replay.rs
src/ghost/: mod.rs
src/ghost/get_ghost/: demo.rs  mod.rs  surf_gateway.rs
src/loader/: bsp_resource.rs  mod.rs  native.rs
src/renderer/: bsp_buffer.rs  bsp_lightmap.rs  bsp_load.rs  camera.rs  finalize.rs  lightmap_load.rs  mdl_buffer.rs  mdl_load.rs  miptex_load.rs  mod.rs  mvp_buffer.rs  oit.rs  render_targets.rs  skybox.rs  texture_load.rs  types.rs  utils.rs  world_buffer.rs
src/renderer/post_process/: gray_scale.rs  mod.rs  pp_trait.rs
src/renderer/post_process/bloom/: brightness_extraction.wgsl  mod.rs
src/renderer/post_process/chromatic_aberration/: mod.rs
src/renderer/shader/: bsp.wgsl  finalize.wgsl  gray_scale.wgsl  main.wgsl  mdl.wgsl  mipmap.wgsl  resolve.wgsl  skybox.wgsl  wboit_resolve.wgsl  world.wgsl
src/renderer/texture_buffer/: mipmap.rs  texture.rs  texture_array.rs
src/renderer/texture_load/: mod.rs  texture_array.rs
wad/: Cargo.toml
wad/src/: types.rs
www/: README.md  index.html
