[package]
name = "kdr"
version = "0.1.0"
edition = "2024"

[workspace.package]
authors = ["Lê Hàn Minh Khang (Khang Le) <mkhangle20@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.21.0"
cgmath = "0.18.0"
glam = "0.29.2"
image = { version = "0.25.5", default-features = false, features = [
    "bmp",
    "png",
    "jpeg",
    "tga",
] }
pollster = "0.4.0"
tobj = "4.0.3"
wgpu = "24.0.1"
winit = "0.30.9"

bsp = { path = "./bsp" }
wad = { version = "0.1.0", path = "wad" }
mdl = { path = "./mdl" }
bitflags = "2.8.0"
guillotiere = "0.6.2"
eyre = "0.6.12"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-tracy = { version = "0.11.4", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-chrome = "0.7.2"
dem = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nom = "7.1.3"
thiserror = "2.0.12"
