[package]
name = "ghost"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# basically just the latest git commit
dem = { git = "https://github.com/khanghugo/dem.git", rev = "c89f76f1efadf746283c04ce3f8e37654e3f632f" }
common = { path = "../common" }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
nom = "7.1.3"
glam = "0.30.1"
