[package]
name = "kdr"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# local dependencies
bsp = { path = "../bsp" }
wad = { path = "../wad" }
mdl = { path = "../mdl" }

bytemuck = { version = "1.21.0" }
# default bytemuck traits aren't available inside base bytemuck when compile wasm32, for some reasons
# so it is better to have this for both platform
bytemuck_derive = "1.9.3"

cgmath = "0.18.0"
glam = "0.29.2"
image = { version = "0.25.5", default-features = false, features = [
    "bmp",
    "png",
    "jpeg",
    "tga",
] }
wgpu = { version = "24.0.1", features = ["webgl"] }
winit = { version = "0.30.9", features = [] }

bitflags = "2.8.0"
guillotiere = "0.6.2"
eyre = "0.6.12"
rayon = "1.10.0"
dem = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nom = "7.1.3"
thiserror = "2.0.12"

# std::time::Instant panics in wasm32 and I don't like to repeat the exact same work that this crate already does
# this crates re-exports std::time when not compiling to wasm32 so this one can just be used every where.
web-time = "1.1.0"

# for some FUCKING reasons, cant compile the rest of the zip library
zip = { version = "2.6.1", features = ["deflate"], default-features = false }

# tracing in browser
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# native specific dependencies
# basically the tracing stuffs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-tracy = { version = "0.11.4", optional = true }
tracing-chrome = "0.7.2"
pollster = "0.4.0"

# web specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# enable js support for wasm compile
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
    "RequestInit",
    "RequestMode",
    "Request",
] }
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
wasm-bindgen-futures = "0.4.50"
tracing-wasm = "0.2.1"

[lib]
crate-type = ["cdylib", "rlib"]
