[package]
name = "kdr"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# local dependencies
bsp = { path = "../bsp" }
wad = { path = "../wad" }
mdl = { path = "../mdl" }
spr = { path = "../spr" }
ghost = { path = "../ghost" }
loader = { path = "../loader" }
common = { path = "../common" }
# puppeteer for web only, but we include both here because i don't like adding lots of directives
# just add directives where it matters, instead of the whole code
puppeteer = { path = "../puppeteer" }

bytemuck = { version = "1.21.0" }
# default bytemuck traits aren't available inside base bytemuck when compile wasm32, for some reasons
# so it is better to have this for both platform
bytemuck_derive = "1.9.3"

cgmath = "0.18.0"
glam = "0.29.2"
image = { version = "0.25.5", default-features = false, features = [
    "bmp",
    "png",
    "jpeg",
    "tga",
] }

bitflags = "2.8.0"
guillotiere = "0.6.2"
eyre = "0.6.12"
rayon = "1.10.0"
thiserror = "2.0.12"

# std::time::Instant panics in wasm32 and I don't like to repeat the exact same work that this crate already does
# this crates re-exports std::time when not compiling to wasm32 so this one can just be used every where.
web-time = "1.1.0"

# tracing in browser
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# egui integration
egui = { version = "0.31.1" }
# need these crates along with the original crates
egui-wgpu = { version = "0.31.1", features = ["winit"] }
# disable all featurse but have winit enable
# need to disable arboards, which is important to compile to wasm32
egui-winit = { version = "0.31.1", default-features = false, features = [
    "links",
] }
wgpu = { version = "24.0.3", features = ["webgl"] }
winit = { version = "0.30.9", features = [] }
rfd = "0.15.3"
kira = "0.10.5"
mint = "0.5.9"
# futures is needed in wasm as well because of ".now_or_never()" on async rfd
futures = "0.3.31"
egui-notify = "0.19.0"
oklab = "1.1.2"
rand = "0.9.1"

# native specific dependencies
# basically the tracing stuffs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-tracy = { version = "0.11.4", optional = true }
tracing-chrome = "0.7.2"

# web specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# enable js support for wasm compile
getrandom = { version = "0.3.3", features = ["wasm_js"] }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
    "RequestInit",
    "RequestMode",
    "Request",
    "Location",
] }
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.50"
tracing-wasm = "0.2.1"

[lib]
crate-type = ["cdylib", "rlib"]
