[package]
name = "loader"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
wad = { path = "../wad" }
bsp = { path = "../bsp" }
mdl = { path = "../mdl" }
ghost = { path = "../ghost" }
common = { path = "../common" }

cgmath = "0.18.0"
image = "0.25.6"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
thiserror = "2.0.12"
zip = { version = "2.6.1", features = ["deflate"], default-features = false }
eyre = "0.6.12"
reqwest = { version = "0.12.15", features = ["json"] }
