[package]
name = "loader"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
wad = { path = "../wad" }
bsp = { path = "../bsp" }
mdl = { path = "../mdl" }
spr = { path = "../spr" }
ghost = { path = "../ghost" }
common = { path = "../common" }

cgmath = "0.18.0"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
thiserror = "2.0.12"
zip = { version = "2.6.1", features = ["deflate"], default-features = false }
eyre = "0.6.12"
reqwest = { version = "0.12.15", features = ["json", "stream"] }

# we only need to load the sound
kira = { version = "0.10.5", default-features = false, features = ["wav"] }

futures-util = "0.3.31"
rmp-serde = "1.3.0"
