[package]
name = "rest-api-server"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
loader = { path = "../loader" }

actix-cors = "0.7.1"
actix-web = "4.10.2"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
zip = { version = "2.6.1", features = ["deflate"], default-features = false }

[features]
default = []
cors = []
