[package]
name = "rest-api-server"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
loader = { path = "../loader" }
common = { path = "../common" }
config = { path = "../config" }
ghost = { path = "../ghost" }

actix-cors = "0.7.1"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
uuid = { version = "1.16.0", features = ["v4"] }
zip = { version = "2.6.1", features = ["deflate"], default-features = false }

[features]
default = []
cors = []
